bin/tests/errors_lexer/lexer/lex_err_missing_bin_digit.swg
#global fileprivate

0b // swc-expected-error {{lex_err_missing_bin_digit}}
